[package]
name = "rsvg-render"
version = "0.1.0"
authors = ["biojet1"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = "0.8.0"
failure = "0.1.5"
memmap = "^0.6.2"
librsvg = { git = "https://gitlab.gnome.org/GNOME/librsvg" }
structopt = "0.3.7"
